# mdify

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: ci.yml  publish.yml  requirements-docs.txt
configs/: easy_ocr_config.yml  paddle_ocr_config.yml  surya_ocr_config.yml
docs/: index.md  reference.md  usage.md
mdify/: __init__.py  extractors.py  layout.py  models.py  ocr.py  output.py  parsers.py  utils.py
mdify/configs/: blip_config.yml  google_vqa_config.yml  layout_detection_config.yml
mdify/src/: extractors.py  layout.py  models.py  ocr.py  output.py  parsers.py  utils.py
reference/: index.html
search/: search_index.json
usage/: index.html
