[tool.poetry]
name = "mdify"
version = "0.1.0"
description = "A powerful tool to extract text, tables, charts, and formulas from documents and convert them into Markdown format, ideal to improve LLM's accuracy and for versatile document processing."
authors = ["stefanodangelo <61756862+stefanodangelo@users.noreply.github.com>"]
license = "CC-BY-NC-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"